syntax = "proto3";

package agent;

option go_package = "github.com/YoungBoyGod/remotegpu/api/proto/agent";

// Agent 服务定义
service AgentService {
  // 停止进程
  rpc StopProcess(StopProcessRequest) returns (Response);

  // 重置SSH密钥
  rpc ResetSSH(ResetSSHRequest) returns (Response);

  // 清理机器
  rpc CleanupMachine(CleanupRequest) returns (Response);

  // 挂载数据集
  rpc MountDataset(MountDatasetRequest) returns (Response);

  // 获取系统信息
  rpc GetSystemInfo(SystemInfoRequest) returns (SystemInfo);

  // 执行命令
  rpc ExecuteCommand(ExecuteCommandRequest) returns (ExecuteCommandResponse);

  // 健康检查
  rpc Ping(PingRequest) returns (PingResponse);
}

// 通用响应
message Response {
  bool success = 1;
  int32 code = 2;
  string message = 3;
}

// 停止进程请求
message StopProcessRequest {
  string host_id = 1;
  int32 process_id = 2;
  string signal = 3;
}

// 重置SSH请求
message ResetSSHRequest {
  string host_id = 1;
  string public_key = 2;
  string username = 3;
}

// 清理请求
message CleanupRequest {
  string host_id = 1;
  repeated string cleanup_types = 2;
}

// 挂载数据集请求
message MountDatasetRequest {
  string host_id = 1;
  uint32 dataset_id = 2;
  string source_path = 3;
  string mount_point = 4;
  bool read_only = 5;
}

// 系统信息请求
message SystemInfoRequest {
  string host_id = 1;
}

// GPU信息
message GPUInfo {
  int32 index = 1;
  string name = 2;
  uint64 memory_total = 3;
  uint64 memory_used = 4;
  int32 utilization = 5;
  int32 temperature = 6;
}

// 系统信息
message SystemInfo {
  string hostname = 1;
  string os = 2;
  string kernel = 3;
  int32 cpu_cores = 4;
  uint64 memory_total = 5;
  uint64 memory_free = 6;
  uint64 disk_total = 7;
  uint64 disk_free = 8;
  int32 gpu_count = 9;
  repeated GPUInfo gpu_info = 10;
  int64 uptime = 11;
}

// 执行命令请求
message ExecuteCommandRequest {
  string host_id = 1;
  string command = 2;
  int32 timeout = 3;
}

// 执行命令响应
message ExecuteCommandResponse {
  int32 exit_code = 1;
  string stdout = 2;
  string stderr = 3;
}

// Ping请求
message PingRequest {
  string host_id = 1;
}

// Ping响应
message PingResponse {
  bool ok = 1;
  string version = 2;
}
